--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
           <img class="carousel-image" src="Imgs and icons/mario.png" class="d-block w-100" alt="mario-pic">
         </div>
         <div class="carousel-item">
+          <h2 class="carousel-text">Laoren Mancka</h2>
+          <h3 class="carousel-text">Photographer, designer and an all round good lad.<br> Keen eye and endless positivity. </h3>
+          <img class="carousel-image" src="Imgs and icons/lao.png" class="d-block w-100" alt="lao-pic">
+        </div>
+        <div class="carousel-item">
           <h2 class="carousel-text">Sokol Stafa</h2>
           <h3 class="carousel-text">The only one to be in this site twice.<br> Coincidence, I think not. </h3>
           <img class="carousel-image" src="Imgs and icons/sokol.png" class="d-block w-100" alt="koli-pic">
